--- a/2.html
+++ b/2.html
@@ -1,3 +1,3 @@
 <title> Redirect in progress </title>
 
-<meta http-equiv="refresh" content="7; url=''" />
+<meta http-equiv="refresh" content="7; url='https://discord.gg/XnuDsYPwDh'" />
