--- a/1.html
+++ b/1.html
@@ -1,3 +1,3 @@
-<title> Redirect in progress
+<title> Redirect in progress </title>
 
 <meta http-equiv="refresh" content="7; url='https://discord.gg/UePMKbnTTn'" />
