--- a/discord.html
+++ b/discord.html
@@ -39,22 +39,20 @@
         <div class="homepage-grid" id="items4">
             <center>
               <a href="https://bluekoekj.github.io/discord/3">
-                    <button class="normal"><img src="https://lekrkoekj.nl/projects/images/me.png">
+                    <button class="normal">
                         Technically A Discord Server</button>
                 <a href="https://bluekoekj.github.io/discord/1">    
-              <button class="normal"><img src="https://bluekoekj.github.io/betahtml/img/yipee.PNG	" width="81%" height="135">
-                        <br>
-                        Main server</button>
+              <button class="normal">                        Main server</button>
               </a>
               <p>&nbsp;</p>
               <p><a href="https://lekrkoekj.github.io/projects">              </a></p>
             </center>
             
              <a href="https://bluekoekj.github.io/discord/4">
-                    <button class="normal"><img src="https://bluekoekj.github.io/betahtml/img/QuandaleOSlogoV2.png">
+                    <button class="normal">
                         Bluekoekj Games</button>
                               <a href="https://bluekoekj.github.io/discord/2">
-                    <button class="normal"><img src="https://bluekoekj.github.io/betahtml/img/QuandaleOSlogoV2.png">
+                    <button class="normal">
                         Wave Broadcasting</button>   
             
           <p>&nbsp;</p>
