--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
         <nav>
             <ul>
-                <a href="index.html"><li class="logo"><img src="https://bluekoekj.github.io/betahtml/img/me.jpg	"></li></a>
+                <a href="https://bluekoekj.github.io/"><li class="logo"><img src="https://bluekoekj.github.io/betahtml/img/me.jpg	"></li></a>
             </ul>
         </nav>
         
